# aocc

./: .gitignore  BUILD_COMMANDS.txt  CMakeLists.txt  aoc.c  build.py  build_cl.py
day1/: day1.c  day1.h
day10/: day10.c  day10.h
day11/: day11.c  day11.h
day12/: day12.c  day12.h
day13/: day13.c  day13.h
day14/: day14.c  day14.h
day15/: day15.c  day15.h
day16/: day16.c  day16.h
day17/: day17.c  day17.h
day18/: day18.c  day18.h
day19/: day19.c
day2/: day2.c  day2.h
day20/: day20.c  day20.h
day21/: day21.c  day21.h
day22/: day22.c  day22.h
day23/: day23.c  day23.h
day24/: day24.c  day24.h
day25/: day25.c  day25.h
day3/: day3.c  day3.h
day4/: day4.c  day4.h
day5/: day5.c  day5.h
day6/: day6.c  day6.h
day7/: day7.c  day7.h
day8/: day8.c  day8.h
day9/: day9.c  day9.h
utils/: uint256.c  utils.c  utils.h
